updated html and css

--- a/cec.html
+++ b/cec.html
@@ -8,6 +8,16 @@
     <link href="cec.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+      <header>
+        <div id="top" class="banner">
+        </div>
+        <div id="bottom" class="banner">
+          <div id="">
 
+          </div>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
