--- a/cec.html
+++ b/cec.html
@@ -8,7 +8,7 @@
     <link href="cec.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+
       <header>
         <div id="top" class="banner">
           <div id="uw-logo-wrapper">
@@ -18,6 +18,20 @@
         <div id="bottom" class="banner">
         </div>
       </header>
-    </div>
+      <main class="banner">
+        <form action="cec.php">
+          <div id="search">
+            <input name="search" type="search" placeholder="search here">
+            <div id="submit">
+              <input type="submit">
+            </div>
+          </div>
+          <select name="filter" class="form-control">
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+          </select>
+        </form>
+      </main>
   </body>
 </html>
